--- a/APS02/CIFAR/Modelos.ipynb
+++ b/APS02/CIFAR/Modelos.ipynb
@@ -629,6 +629,175 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Com os primeiros 1500 componentes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 26min, sys: 879 ms, total: 26min 1s\n",
+      "Wall time: 26min 4s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "svclassifier = LinearSVC()\n",
+    "svclassifier.fit(X_train.iloc[:,:1500], y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>airplane</th>\n",
+       "      <th>automobile</th>\n",
+       "      <th>bird</th>\n",
+       "      <th>cat</th>\n",
+       "      <th>deer</th>\n",
+       "      <th>dog</th>\n",
+       "      <th>frog</th>\n",
+       "      <th>horse</th>\n",
+       "      <th>ship</th>\n",
+       "      <th>truck</th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>macro avg</th>\n",
+       "      <th>weighted avg</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>f1-score</th>\n",
+       "      <td>0.573716</td>\n",
+       "      <td>0.590704</td>\n",
+       "      <td>0.380952</td>\n",
+       "      <td>0.334598</td>\n",
+       "      <td>0.418723</td>\n",
+       "      <td>0.398111</td>\n",
+       "      <td>0.575089</td>\n",
+       "      <td>0.551105</td>\n",
+       "      <td>0.665356</td>\n",
+       "      <td>0.561746</td>\n",
+       "      <td>0.5094</td>\n",
+       "      <td>0.505010</td>\n",
+       "      <td>0.504711</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>precision</th>\n",
+       "      <td>0.563934</td>\n",
+       "      <td>0.564466</td>\n",
+       "      <td>0.430976</td>\n",
+       "      <td>0.357406</td>\n",
+       "      <td>0.437453</td>\n",
+       "      <td>0.415786</td>\n",
+       "      <td>0.510312</td>\n",
+       "      <td>0.527607</td>\n",
+       "      <td>0.674419</td>\n",
+       "      <td>0.557929</td>\n",
+       "      <td>0.5094</td>\n",
+       "      <td>0.504029</td>\n",
+       "      <td>0.504013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>recall</th>\n",
+       "      <td>0.583842</td>\n",
+       "      <td>0.619499</td>\n",
+       "      <td>0.341333</td>\n",
+       "      <td>0.314527</td>\n",
+       "      <td>0.401531</td>\n",
+       "      <td>0.381877</td>\n",
+       "      <td>0.658703</td>\n",
+       "      <td>0.576794</td>\n",
+       "      <td>0.656533</td>\n",
+       "      <td>0.565617</td>\n",
+       "      <td>0.5094</td>\n",
+       "      <td>0.510026</td>\n",
+       "      <td>0.509400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>support</th>\n",
+       "      <td>1473.000000</td>\n",
+       "      <td>1477.000000</td>\n",
+       "      <td>1500.000000</td>\n",
+       "      <td>1542.000000</td>\n",
+       "      <td>1437.000000</td>\n",
+       "      <td>1545.000000</td>\n",
+       "      <td>1465.000000</td>\n",
+       "      <td>1491.000000</td>\n",
+       "      <td>1546.000000</td>\n",
+       "      <td>1524.000000</td>\n",
+       "      <td>0.5094</td>\n",
+       "      <td>15000.000000</td>\n",
+       "      <td>15000.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              airplane   automobile         bird          cat         deer  \\\n",
+       "f1-score      0.573716     0.590704     0.380952     0.334598     0.418723   \n",
+       "precision     0.563934     0.564466     0.430976     0.357406     0.437453   \n",
+       "recall        0.583842     0.619499     0.341333     0.314527     0.401531   \n",
+       "support    1473.000000  1477.000000  1500.000000  1542.000000  1437.000000   \n",
+       "\n",
+       "                   dog         frog        horse         ship        truck  \\\n",
+       "f1-score      0.398111     0.575089     0.551105     0.665356     0.561746   \n",
+       "precision     0.415786     0.510312     0.527607     0.674419     0.557929   \n",
+       "recall        0.381877     0.658703     0.576794     0.656533     0.565617   \n",
+       "support    1545.000000  1465.000000  1491.000000  1546.000000  1524.000000   \n",
+       "\n",
+       "           accuracy     macro avg  weighted avg  \n",
+       "f1-score     0.5094      0.505010      0.504711  \n",
+       "precision    0.5094      0.504029      0.504013  \n",
+       "recall       0.5094      0.510026      0.509400  \n",
+       "support      0.5094  15000.000000  15000.000000  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# avalia predicao\n",
+    "y_pred = svclassifier.predict(X_test.iloc[:,:1500])\n",
+    "report = classification_report(y_test, y_pred,output_dict = True)\n",
+    "pd.DataFrame(report)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Radial basis function SVM"
    ]
   },
@@ -805,13 +974,189 @@
     "report = classification_report(y_test, y_pred,output_dict = True)\n",
     "pd.DataFrame(report)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Com os primeiros 1500 componentes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 38min 54s, sys: 964 ms, total: 38min 55s\n",
+      "Wall time: 38min 56s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "rbfsvclassifier = SVC(kernel='rbf', tol=0.002)\n",
+    "rbfsvclassifier.fit(X_train.iloc[:,:1500], y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>airplane</th>\n",
+       "      <th>automobile</th>\n",
+       "      <th>bird</th>\n",
+       "      <th>cat</th>\n",
+       "      <th>deer</th>\n",
+       "      <th>dog</th>\n",
+       "      <th>frog</th>\n",
+       "      <th>horse</th>\n",
+       "      <th>ship</th>\n",
+       "      <th>truck</th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>macro avg</th>\n",
+       "      <th>weighted avg</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>f1-score</th>\n",
+       "      <td>0.641672</td>\n",
+       "      <td>0.677377</td>\n",
+       "      <td>0.486280</td>\n",
+       "      <td>0.418357</td>\n",
+       "      <td>0.499125</td>\n",
+       "      <td>0.482149</td>\n",
+       "      <td>0.626809</td>\n",
+       "      <td>0.624827</td>\n",
+       "      <td>0.739187</td>\n",
+       "      <td>0.668579</td>\n",
+       "      <td>0.588333</td>\n",
+       "      <td>0.586436</td>\n",
+       "      <td>0.586263</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>precision</th>\n",
+       "      <td>0.627515</td>\n",
+       "      <td>0.656707</td>\n",
+       "      <td>0.507614</td>\n",
+       "      <td>0.429352</td>\n",
+       "      <td>0.502113</td>\n",
+       "      <td>0.507880</td>\n",
+       "      <td>0.581436</td>\n",
+       "      <td>0.646805</td>\n",
+       "      <td>0.749004</td>\n",
+       "      <td>0.649938</td>\n",
+       "      <td>0.588333</td>\n",
+       "      <td>0.585836</td>\n",
+       "      <td>0.585909</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>recall</th>\n",
+       "      <td>0.656483</td>\n",
+       "      <td>0.699391</td>\n",
+       "      <td>0.466667</td>\n",
+       "      <td>0.407912</td>\n",
+       "      <td>0.496173</td>\n",
+       "      <td>0.458900</td>\n",
+       "      <td>0.679863</td>\n",
+       "      <td>0.604292</td>\n",
+       "      <td>0.729625</td>\n",
+       "      <td>0.688320</td>\n",
+       "      <td>0.588333</td>\n",
+       "      <td>0.588763</td>\n",
+       "      <td>0.588333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>support</th>\n",
+       "      <td>1473.000000</td>\n",
+       "      <td>1477.000000</td>\n",
+       "      <td>1500.000000</td>\n",
+       "      <td>1542.000000</td>\n",
+       "      <td>1437.000000</td>\n",
+       "      <td>1545.000000</td>\n",
+       "      <td>1465.000000</td>\n",
+       "      <td>1491.000000</td>\n",
+       "      <td>1546.000000</td>\n",
+       "      <td>1524.000000</td>\n",
+       "      <td>0.588333</td>\n",
+       "      <td>15000.000000</td>\n",
+       "      <td>15000.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              airplane   automobile         bird          cat         deer  \\\n",
+       "f1-score      0.641672     0.677377     0.486280     0.418357     0.499125   \n",
+       "precision     0.627515     0.656707     0.507614     0.429352     0.502113   \n",
+       "recall        0.656483     0.699391     0.466667     0.407912     0.496173   \n",
+       "support    1473.000000  1477.000000  1500.000000  1542.000000  1437.000000   \n",
+       "\n",
+       "                   dog         frog        horse         ship        truck  \\\n",
+       "f1-score      0.482149     0.626809     0.624827     0.739187     0.668579   \n",
+       "precision     0.507880     0.581436     0.646805     0.749004     0.649938   \n",
+       "recall        0.458900     0.679863     0.604292     0.729625     0.688320   \n",
+       "support    1545.000000  1465.000000  1491.000000  1546.000000  1524.000000   \n",
+       "\n",
+       "           accuracy     macro avg  weighted avg  \n",
+       "f1-score   0.588333      0.586436      0.586263  \n",
+       "precision  0.588333      0.585836      0.585909  \n",
+       "recall     0.588333      0.588763      0.588333  \n",
+       "support    0.588333  15000.000000  15000.000000  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# avalia predicao\n",
+    "y_pred = rbfsvclassifier.predict(X_test.iloc[:,:1500])\n",
+    "report = classification_report(y_test, y_pred,output_dict = True)\n",
+    "pd.DataFrame(report)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "py3im",
    "language": "python",
-   "name": "python3"
+   "name": "py3im"
   },
   "language_info": {
    "codemirror_mode": {
@@ -823,7 +1168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
