--- a/APS02/Dogs vs. Cats/Modelos.ipynb
+++ b/APS02/Dogs vs. Cats/Modelos.ipynb
@@ -42,17 +42,16 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "((25000, 2500), (25000, 1))"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 25.2 s, sys: 1.22 s, total: 26.5 s\n",
+      "Wall time: 40.3 s\n"
+     ]
     }
    ],
    "source": [
+    "%%time\n",
     "df = pd.read_csv('kaggle/data_pca.csv')\n",
     "df_labels = pd.read_csv('kaggle/data_labels.csv')\n",
     "df.shape,df_labels.shape"
@@ -478,15 +477,125 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Polinomial SVM\n",
-    "A função polinomial de 3° grau é a escolhida para o kernel"
+    "Com os primeiros 1000 componentes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1min, sys: 9.66 ms, total: 1min\n",
+      "Wall time: 1min\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "svclassifier = LinearSVC()\n",
+    "svclassifier.fit(X_train.iloc[:,:1000], y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cat</th>\n",
+       "      <th>dog</th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>macro avg</th>\n",
+       "      <th>weighted avg</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>f1-score</th>\n",
+       "      <td>0.660150</td>\n",
+       "      <td>0.666964</td>\n",
+       "      <td>0.663591</td>\n",
+       "      <td>0.663557</td>\n",
+       "      <td>0.663557</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>precision</th>\n",
+       "      <td>0.666973</td>\n",
+       "      <td>0.660344</td>\n",
+       "      <td>0.663591</td>\n",
+       "      <td>0.663658</td>\n",
+       "      <td>0.663658</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>recall</th>\n",
+       "      <td>0.653465</td>\n",
+       "      <td>0.673717</td>\n",
+       "      <td>0.663591</td>\n",
+       "      <td>0.663591</td>\n",
+       "      <td>0.663591</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>support</th>\n",
+       "      <td>2222.000000</td>\n",
+       "      <td>2222.000000</td>\n",
+       "      <td>0.663591</td>\n",
+       "      <td>4444.000000</td>\n",
+       "      <td>4444.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   cat          dog  accuracy    macro avg  weighted avg\n",
+       "f1-score      0.660150     0.666964  0.663591     0.663557      0.663557\n",
+       "precision     0.666973     0.660344  0.663591     0.663658      0.663658\n",
+       "recall        0.653465     0.673717  0.663591     0.663591      0.663591\n",
+       "support    2222.000000  2222.000000  0.663591  4444.000000   4444.000000"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# avalia predicao\n",
+    "y_pred = svclassifier.predict(X_test.iloc[:,:1000])\n",
+    "report = classification_report(y_test, y_pred,output_dict = True)\n",
+    "pd.DataFrame(report)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Teste com as 5000 primeiras amostras:"
+    "# Polinomial SVM\n",
+    "A função polinomial de 3° grau é a escolhida para o kernel"
    ]
   },
   {
@@ -610,13 +719,371 @@
     "report = classification_report(y_test, y_pred,output_dict = True)\n",
     "pd.DataFrame(report)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Com os primeiros 1000 componentes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 32min 51s, sys: 1.31 s, total: 32min 53s\n",
+      "Wall time: 32min 55s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "polysvclassifier = SVC(kernel='poly', tol=0.002)\n",
+    "polysvclassifier.fit(X_train.iloc[:,:1000], y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cat</th>\n",
+       "      <th>dog</th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>macro avg</th>\n",
+       "      <th>weighted avg</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>f1-score</th>\n",
+       "      <td>0.724928</td>\n",
+       "      <td>0.754894</td>\n",
+       "      <td>0.740774</td>\n",
+       "      <td>0.739911</td>\n",
+       "      <td>0.739911</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>precision</th>\n",
+       "      <td>0.772126</td>\n",
+       "      <td>0.715900</td>\n",
+       "      <td>0.740774</td>\n",
+       "      <td>0.744013</td>\n",
+       "      <td>0.744013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>recall</th>\n",
+       "      <td>0.683168</td>\n",
+       "      <td>0.798380</td>\n",
+       "      <td>0.740774</td>\n",
+       "      <td>0.740774</td>\n",
+       "      <td>0.740774</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>support</th>\n",
+       "      <td>2222.000000</td>\n",
+       "      <td>2222.000000</td>\n",
+       "      <td>0.740774</td>\n",
+       "      <td>4444.000000</td>\n",
+       "      <td>4444.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   cat          dog  accuracy    macro avg  weighted avg\n",
+       "f1-score      0.724928     0.754894  0.740774     0.739911      0.739911\n",
+       "precision     0.772126     0.715900  0.740774     0.744013      0.744013\n",
+       "recall        0.683168     0.798380  0.740774     0.740774      0.740774\n",
+       "support    2222.000000  2222.000000  0.740774  4444.000000   4444.000000"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# avalia predicao\n",
+    "y_pred = polysvclassifier.predict(X_test.iloc[:,:1000])\n",
+    "report = classification_report(y_test, y_pred,output_dict = True)\n",
+    "pd.DataFrame(report)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Com os primeiros 1500 componentes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 30min 14s, sys: 451 ms, total: 30min 14s\n",
+      "Wall time: 30min 15s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "polysvclassifier = SVC(kernel='poly', tol=0.002)\n",
+    "polysvclassifier.fit(X_train.iloc[:,:1500], y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cat</th>\n",
+       "      <th>dog</th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>macro avg</th>\n",
+       "      <th>weighted avg</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>f1-score</th>\n",
+       "      <td>0.703286</td>\n",
+       "      <td>0.737868</td>\n",
+       "      <td>0.721647</td>\n",
+       "      <td>0.720577</td>\n",
+       "      <td>0.720577</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>precision</th>\n",
+       "      <td>0.752953</td>\n",
+       "      <td>0.697237</td>\n",
+       "      <td>0.721647</td>\n",
+       "      <td>0.725095</td>\n",
+       "      <td>0.725095</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>recall</th>\n",
+       "      <td>0.659766</td>\n",
+       "      <td>0.783528</td>\n",
+       "      <td>0.721647</td>\n",
+       "      <td>0.721647</td>\n",
+       "      <td>0.721647</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>support</th>\n",
+       "      <td>2222.000000</td>\n",
+       "      <td>2222.000000</td>\n",
+       "      <td>0.721647</td>\n",
+       "      <td>4444.000000</td>\n",
+       "      <td>4444.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   cat          dog  accuracy    macro avg  weighted avg\n",
+       "f1-score      0.703286     0.737868  0.721647     0.720577      0.720577\n",
+       "precision     0.752953     0.697237  0.721647     0.725095      0.725095\n",
+       "recall        0.659766     0.783528  0.721647     0.721647      0.721647\n",
+       "support    2222.000000  2222.000000  0.721647  4444.000000   4444.000000"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# avalia predicao\n",
+    "y_pred = polysvclassifier.predict(X_test.iloc[:,:1500])\n",
+    "report = classification_report(y_test, y_pred,output_dict = True)\n",
+    "pd.DataFrame(report)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Com os primeiros 500 componentes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 23min 28s, sys: 500 ms, total: 23min 28s\n",
+      "Wall time: 23min 29s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "polysvclassifier = SVC(kernel='poly', tol=0.002)\n",
+    "polysvclassifier.fit(X_train.iloc[:,:500], y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cat</th>\n",
+       "      <th>dog</th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>macro avg</th>\n",
+       "      <th>weighted avg</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>f1-score</th>\n",
+       "      <td>0.706422</td>\n",
+       "      <td>0.743784</td>\n",
+       "      <td>0.726373</td>\n",
+       "      <td>0.725103</td>\n",
+       "      <td>0.725103</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>precision</th>\n",
+       "      <td>0.761979</td>\n",
+       "      <td>0.699287</td>\n",
+       "      <td>0.726373</td>\n",
+       "      <td>0.730633</td>\n",
+       "      <td>0.730633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>recall</th>\n",
+       "      <td>0.658416</td>\n",
+       "      <td>0.794329</td>\n",
+       "      <td>0.726373</td>\n",
+       "      <td>0.726373</td>\n",
+       "      <td>0.726373</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>support</th>\n",
+       "      <td>2222.000000</td>\n",
+       "      <td>2222.000000</td>\n",
+       "      <td>0.726373</td>\n",
+       "      <td>4444.000000</td>\n",
+       "      <td>4444.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   cat          dog  accuracy    macro avg  weighted avg\n",
+       "f1-score      0.706422     0.743784  0.726373     0.725103      0.725103\n",
+       "precision     0.761979     0.699287  0.726373     0.730633      0.730633\n",
+       "recall        0.658416     0.794329  0.726373     0.726373      0.726373\n",
+       "support    2222.000000  2222.000000  0.726373  4444.000000   4444.000000"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# avalia predicao\n",
+    "y_pred = polysvclassifier.predict(X_test.iloc[:,:500])\n",
+    "report = classification_report(y_test, y_pred,output_dict = True)\n",
+    "pd.DataFrame(report)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "py3im",
    "language": "python",
-   "name": "python3"
+   "name": "py3im"
   },
   "language_info": {
    "codemirror_mode": {
@@ -628,7 +1095,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
